--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alignui/cli",
-  "version": "0.0.1-alpha.26",
+  "version": "0.0.2",
   "description": "A command line interface to setup AlignUI",
   "main": "dist/index.js",
   "type": "module",
