--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@alignui/cli",
-  "version": "0.0.2",
-  "description": "A command line interface to setup AlignUI",
+  "version": "0.0.3",
+  "description": "A command line interface to setup AlignUI with Tailwind CSS v4.1 support",
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
